--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -8,50 +8,54 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"
           integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" href="/material-design-icons/iconfont/material-icons.css">
-    <style>
-        body {
-            padding-top: 0%;
-            word-wrap: break-word;
-        }
-    </style>
+    <script
+            src="http://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-<nav id="navbar-ordine" class="navbar navbar-light bg-light"
-     style="position: fixed !important; width: 100% !important;">
-    <a class="navbar-brand" href="#">Nuovo Ordine</a>
-    <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a class="nav-link" href="/new-order">Cliente</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="/new-order-product">Prodotti</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="/new-order-cond-pag">Condizione di pagamento</a>
-        </li>
-    </ul>
-</nav>
-<div class="container" style="padding-top: 3%">
-    <form action="/new-order" method="post" style="position: fixed !important;">
-        <div class="form-row align-items-center">
-            <div class="col-auto">
-                <label class="sr-only" for="inlineFormCodCli">Codice cliente</label>
-                <input type="text" name="ccod" class="form-control mb-2" id="inlineFormInputCodCli"
-                       placeholder="Codice cliente">
-            </div>
-            <div class="col-auto">
-                <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
-                <input type="text" name="xragsoc" class="form-control mb-2" id="inlineFormInputRagSoc"
-                       placeholder="Ragione sociale">
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-2">Cerca</button>
-            </div>
+<div class="sticky-top">
+    <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Nuovo Ordine</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+                       data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Azioni
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+                        <li><a class="dropdown-item" href="/new-order-product">Avanti</a></li>
+                        <li><a class="dropdown-item" href="/home">Annulla</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form action="/new-order" method="post" class="form-inline">
+                <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <label class="sr-only" for="inlineFormCodCli">Codice cliente</label>
+                        <input type="text" name="ccod" class="form-control mb-2" id="inlineFormInputCodCli"
+                               placeholder="Codice cliente">
+                    </div>
+                    <div class="col-auto">
+                        <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
+                        <input type="text" name="xragsoc" class="form-control mb-2" id="inlineFormInputRagSoc"
+                               placeholder="Ragione sociale">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary mb-2">Cerca</button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </form>
+    </nav>
 </div>
-<div class="container-fluid" style="padding-top: 2%">
-    <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0" style="width: 100%; height: 70%">
+<div class="container-fluid">
+    <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
         <div id="client">
             <table class="table table-hover">
                 <thead>
@@ -77,7 +81,8 @@
                     <td><%= clients.xcom %></td>
                     <td><%= clients.ccap %></td>
                     <td>
-                        <a href="/new-order-product?ccodcli=<%= clients.ccod %>"><i class="material-icons">&#xe5c8</i></a>
+                        <a href="/new-order-product?ccodcli=<%= clients.ccod %>"><i
+                                    class="material-icons">&#xe5c8</i></a>
                     </td>
                 </tr>
                 <% }); %>
@@ -85,7 +90,6 @@
             </table>
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
