--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
         <!-- LOCAL INFORMATION -->
         <a href="/new-order">
             <div class="col-sm-6">
-                <div class="well">
+                <div class="card">
                     <h3><span class="fa fa-user"></span> Nuovo Ordine</h3>
 
                     <p>
@@ -40,7 +40,7 @@
         <!-- LOCAL INFORMATION -->
         <a href="/order-list">
             <div class="col-sm-6">
-                <div class="well">
+                <div class="card">
                     <h3><span class="fa fa-user"></span> Lista ordini</h3>
 
                     <p>
