correct modal popup

--- a/views/new-order-promo.ejs
+++ b/views/new-order-promo.ejs
@@ -53,7 +53,7 @@
                 <% for(var i = 0; i < anaPromo.length;i++) { %>
                 <tr>
                     <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal<%= i %>"
+                        <button type="button" class="btn btn-primary" data-toggle="modal"
                                 data-target="#Modal<%= i %>">
                             <%= anaPromo[i].xdescpromo %>
                         </button>
