correzioni layout nuovo ordine

--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -52,7 +52,7 @@
                 </div>
                 <div class="w-10 col">
                     <label class="sr-only" for="inlineFormXprod">A</label>
-                    <input type="number" name="xprod" class="form-control mb-2" id="inlineFormInputXprod"
+                    <input type="text" name="xprod" class="form-control mb-2" id="inlineFormInputXprod"
                            placeholder="Descrizione prodotto">
                 </div>
                 <div class="w-10 col">
