corretta edit order

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,27 +24,25 @@
     </div>
     <div class="row">
         <!-- LOCAL INFORMATION -->
-        <a href="/new-order">
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-block">
-                        <h4 class="card-title">Nuovo Ordine</h4>
-                        <p class="card-text">Inserisci un nuovo ordine!</p>
-                    </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-block">
+                    <h4 class="card-title">Nuovo Ordine</h4>
+                    <p class="card-text">Inserisci un nuovo ordine!</p>
+                    <a href="/new-order" class="btn btn-primary">Nuovo</a>
                 </div>
             </div>
-        </a>
+        </div>
         <!-- LOCAL INFORMATION -->
-        <a href="/order-list">
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-block">
-                        <h4 class="card-title">Lista Ordini</h4>
-                        <p class="card-text">Visualizza la lista dei tuoi ordini!</p>
-                    </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-block">
+                    <h4 class="card-title">Lista Ordini</h4>
+                    <p class="card-text">Visualizza la lista dei tuoi ordini!</p>
+                    <a href="/order-list" class="btn btn-primary">Visualizza</a>
                 </div>
             </div>
-        </a>
+        </div>
     </div>
 </div>
 </body>
