--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,27 +20,25 @@
 <div class="container">
     <div class="page-header text-center">
         <h1><span class="fa fa-anchor"></span> HOME</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Esci</a>
+        <a href="/logout" class="btn btn-primary btn-lg" role="button">Esci</a>
     </div>
     <div class="row">
         <!-- LOCAL INFORMATION -->
         <div class="col-sm-6">
-            <div class="card">
-                <div class="card-block">
-                    <h4 class="card-title">Nuovo Ordine</h4>
-                    <p class="card-text">Inserisci un nuovo ordine!</p>
-                    <a href="/new-order" class="btn btn-primary">Nuovo</a>
-                </div>
+            <div class="jumbotron">
+                <h4 class="display-6">Nuovo Ordine</h4>
+                <hr class="my-6">
+                <p class="lead">Inserisci un nuovo ordine!</p>
+                <a href="/new-order" class="btn btn-primary btn-lg" role="button">Nuovo</a>
             </div>
         </div>
         <!-- LOCAL INFORMATION -->
         <div class="col-sm-6">
-            <div class="card">
-                <div class="card-block">
-                    <h4 class="card-title">Lista Ordini</h4>
-                    <p class="card-text">Visualizza la lista dei tuoi ordini!</p>
-                    <a href="/order-list" class="btn btn-primary">Visualizza</a>
-                </div>
+            <div class="jumbotron">
+                <h4 class="display-6">Lista Ordini</h4>
+                <hr class="my-6">
+                <p class="lead">Visualizza la lista dei tuoi ordini!</p>
+                <a href="/new-order" class="btn btn-primary btn-lg" role="button">Visualizza</a>
             </div>
         </div>
     </div>
