--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -86,22 +86,20 @@
             </table>
         </div>
     </div>
-    <footer class="footer">
-        <div class="container">
-            <form action="/req-pdf-order" method="get">
-                <input type="hidden" name="idOrd" value="<%= idOrd %>">
-                <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
-                    <i class="material-icons">&#xe415</i> Salva
-                </button>
-            </form>
-            <form method="post" action="/new-order-sum">
-                <input type="hidden" name="idOrd" value="<%= idOrd %>">
-                <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
-                    <i class="material-icons">&#xe161</i> Conferma
-                </button>
-            </form>
-        </div>
-    </footer>
+    <div class="footer container">
+        <form action="/req-pdf-order" method="get">
+            <input type="hidden" name="idOrd" value="<%= idOrd %>">
+            <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
+                <i class="material-icons">&#xe415</i> Salva
+            </button>
+        </form>
+        <form method="post" action="/new-order-sum">
+            <input type="hidden" name="idOrd" value="<%= idOrd %>">
+            <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
+                <i class="material-icons">&#xe161</i> Conferma
+            </button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
