footer new-order-sum

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -86,7 +86,10 @@
             </table>
         </div>
     </div>
-    <div class="footer container">
+</div>
+</body>
+<footer class="footer">
+    <div class="container">
         <form action="/req-pdf-order" method="get">
             <input type="hidden" name="idOrd" value="<%= idOrd %>">
             <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
@@ -100,6 +103,5 @@
             </button>
         </form>
     </div>
-</div>
-</body>
+</footer>
 </html>
