--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -101,6 +101,34 @@
                     <td><%= products[i].xdesc %></td>
                     <td><%= products[i].iprz %></td>
                     <td>
+                        <button class="btn-primary bg-transparent text-primary border-0 align-bottom"
+                                data-toggle="modal"
+                                data-target="#Modal<%= i %>">
+                            <i class="material-icons">&#xe410</i>
+                        </button>
+                        <div class="modal fade" id="Modal<%= i %>" tabindex="-1" role="dialog"
+                             aria-labelledby="Modal<%= i %>Title" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title"
+                                            id="Modal<%= i %>Title">Anteprima prodotto</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products.ccod %>.jpg">
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
                         <form action="/new-order-product" method="post" class="form-inline">
                             <input type="hidden" name="ccod" value="<%= idOrd %>">
                             <input type="hidden" name="ccodprod" value="<%= products[i].ccod %>">
