--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -118,7 +118,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products.ccod %>.jpg">
+                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products[i].ccod %>.jpg">
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
