finish /new-client post

--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -91,6 +91,7 @@
                     <th scope="col">Codice Prodotto</th>
                     <th scope="col">Descrizione</th>
                     <th scope="col">Prezzo</th>
+                    <th scope="col">Anteprima</th>
                     <th scope="col">Quantità</th>
                 </tr>
                 </thead>
