--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -88,7 +88,7 @@
     </div>
 </div>
 </body>
-<footer class="footer">
+<footer class="footer sticky-bottom">
     <div class="container">
         <div class="row">
             <form action="/req-pdf-order" method="get">
