--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -27,6 +27,9 @@
                     </ul>
                 </li>
             </ul>
+            <a href="/new-client" role="button" class="btn-primary bg-transparent text-primary border-0 align-bottom">
+                <i class="material-icons">&#xe05e</i>
+            </a>
             <form action="/new-order" method="get" class="form-inline">
                 <div class="form-row align-items-center">
                     <div class="col-auto">
