--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -40,58 +40,104 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Codice cliente</label>
-                <input type="number" class="form-control" name="ccli" maxlength="5" required>
+                <input type="number" class="form-control" name="ccod" maxlength="5"  value="<%= ccod %>" required>
             </div>
             <div class="form-group col">
                 <label>Codice Fiscale/Partita I.V.A.</label>
-                <input type="text" class="form-control" name="cfis" maxlength="16" required>
+                <input type="text" class="form-control" name="cfis" maxlength="16" value="<%= cfis %>" required>
             </div>
             <div class="form-group col">
                 <label>Nome</label>
-                <input type="text" class="form-control" name="xnome" maxlength="15" required>
+                <input type="text" class="form-control" name="xnome" maxlength="15" value="<%= xnome %>" required>
             </div>
             <div class="form-group col">
                 <label>Cognome</label>
-                <input type="text" class="form-control" name="xcogn" maxlength="15" required>
+                <input type="text" class="form-control" name="xcogn" maxlength="15" value="<%= xcogn %>" required>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col">
                 <label>Ragione sociale</label>
-                <input type="text" class="form-control" name="xragsoc" maxlength="60" required>
+                <input type="text" class="form-control" name="xragsoc" maxlength="60" value="<%= xragsoc %>" required>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col">
                 <label>Comune</label>
-                <input type="text" class="form-control" name="xcom" maxlength="30" required>
+                <input type="text" class="form-control" name="xcom" maxlength="30" value="<%= xcom %>" required>
             </div>
             <div class="form-group col">
                 <label>Provincia</label>
-                <input type="text" class="form-control" name="cprv" maxlength="2" required>
+                <input type="text" class="form-control" name="cprv" maxlength="2" value="<%= cprv %>" required>
             </div>
             <div class="form-group col">
                 <label>C.A.P.</label>
-                <input type="number" class="form-control" name="ccap" maxlength="5" required>
+                <input type="number" class="form-control" name="ccap" maxlength="5" value="<%= ccap %>" required>
             </div>
             <div class="form-group col">
                 <label>Nazione</label>
-                <input type="text" class="form-control" name="xnaz" maxlength="20" required>
+                <input type="text" class="form-control" name="xnaz" maxlength="20" value="<%= xnaz %>" required>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col">
                 <label>Indirizzo</label>
-                <input type="text" class="form-control" name="xind" maxlength="40" required>
+                <input type="text" class="form-control" name="xind" maxlength="40" value="<%= xind %>" required>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col">
                 <label>E-mail</label>
-                <input type="email" class="form-control" name="xmail" maxlength="60" required>
+                <input type="email" class="form-control" name="xmail" maxlength="60" value="<%= xmail %>" required>
             </div>
         </div>
 
+        <div class="form-row">
+            <% if (user.cage === 9999) { %>
+            <div class="form-group col">
+                <label>Agente</label>
+                <input type="number" class="form-control" name="cage" maxlength="5" required>
+            </div>
+            <div class="form-group col">
+                <label>Tipo commerciale</label>
+                <input type="number" class="form-control" name="ctipcom" maxlength="2" value="30" required>
+            </div>
+            <div class="form-group col">
+                <label>Categoria</label>
+                <input type="text" class="form-control" name="ccat" maxlength="10" value="PROF" required>
+            </div>
+            <div class="form-group col">
+                <label>Zona</label>
+                <input type="number" class="form-control" name="czona" maxlength="1" required>
+            </div>
+            <% } else { %>
+            <div class="form-group col">
+                <label>Agente</label>
+                <input type="number" class="form-control" name="cage" maxlength="5" value="<%= user.cage %>" readonly
+                       required>
+            </div>
+            <div class="form-group col">
+                <label>Tipo commerciale</label>
+                <input type="number" class="form-control" name="ctipcom" maxlength="2" value="30" readonly required>
+            </div>
+            <div class="form-group col">
+                <label>Categoria</label>
+                <input type="text" class="form-control" name="ccat" maxlength="10" value="PROF" readonly required>
+            </div>
+            <div class="form-group col">
+                <label>Agente</label>
+                <input type="number" class="form-control" name="ccat" maxlength="2" value="30" required>
+            </div>
+            <div class="form-group col">
+                <label>Zona</label>
+                <% if (user.cage === 9) { %>
+                <input type="number" class="form-control" name="czona" maxlength="1" value="1" readonly required>
+                <% } else if (user.cage === 5 || user.cage === 1843) { %>
+                <input type="number" class="form-control" name="czona" maxlength="1" value="2" readonly required>
+                <% } %>
+            </div>
+            <% } %>
+        </div>
         <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
             <i class="material-icons">&#xe161</i> Conferma
         </button>
