new client botton on left

--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -27,7 +27,7 @@
                     </ul>
                 </li>
             </ul>
-            <a href="/new-client" role="button" class="btn-primary bg-transparent text-primary border-0 align-bottom">
+            <a href="/new-client" role="button" class="btn-primary bg-transparent mr-auto mb-2 text-primary border-0 align-bottom">
                 <i class="material-icons">&#xe05e</i>
             </a>
             <form action="/new-order" method="get" class="form-inline">
