--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -71,7 +71,7 @@
                 </thead>
                 <tbody>
                 <% clients.forEach(function(clients) { %>
-                <% if(req.user.cage === clients.cage ){%>
+                <% if(res.user.cage === clients.cage ){%>
                 <tr>
                     <th scope="row">
                         <% if (clients.cpiva = '') { %>
