--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -73,9 +73,9 @@
                 </tr>
                 </thead>
                 <tbody>
-                <%= var itot = 0 %>
+                <%= var itot = 0; %>
                 <% for(var i = 0; i < products.length;i++) { %>
-                <%= itot += products[i].iimp %>
+                <%= itot += products[i].iimp; %>
                 <tr>
                     <th scope="row"><%= products[i].ccod %></th>
                     <td><%= products[i].xdesc %></td>
